--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -34,6 +34,12 @@
   <div class="colofon__copyright">
     © 2015 Destiny<span class="highlight">Trials</span>Report
   </div>
+  <div class="colofon__twitter">
+    <a href="https://twitter.com/TrialsReport" target="_blank"
+       analytics-on analytics-event="Click" analytics-category="Twitter">
+      <img src="/assets/img/twitter.svg" alt="Twitter">
+    </a>
+  </div>
   <div class="colofon__email">
     <a href="mailto:destinytrialsreport@gmail.com" target="_blank"><i class="material-icons">&#xE158;</i></a>
   </div>
