undo temp fixes

--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -41,7 +41,7 @@
       </div>
     </div>
   </article>
-  <div class="home__aside">
+  <div class="home__aside" ng-if="flawlessLeaderboard">
     <article class="block top-weapons shadow-z-1">
       <div class="block__title">
         <h2>
@@ -78,7 +78,6 @@
       </div>
     </article>
   </div>
-  <!-- temporarily hidden on xs until UI bugs are resolved -->
   <div class="home__aside" ng-if="gggShow">
     <article class="block top-weapons shadow-z-1">
       <div class="block__title">
