disable API server entirely until issues are resolved

--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -41,7 +41,7 @@
       </div>
     </div>
   </article>
-  <div class="home__aside" ng-if="flawlessLeaderboard">
+  <div class="home__aside" ng-if="flawlessLeaderboard.length > 0">
     <article class="block top-weapons shadow-z-1">
       <div class="block__title">
         <h2>
