--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -21,7 +21,7 @@
       <form ng-submit="searchMainPlayerbyName(mainPlayer)">
         <div class="main-search__row">
           <div class="main-search__input">
-            <input type="text" class="form-control" placeholder="{{fireteam[0].name || (!subdomain ? 'Enter your opponent\'s gamertag' : 'Enter your gamertag')}}" ng-model="mainPlayer" ng-value="(!fireteam[0] ? searchedPlayer : '')">
+            <input type="text" class="form-control" placeholder="{{fireteam[0].name || (!subdomain ? 'Enter your opponent\'s gamertag' : 'Enter your gamertag')}}" ng-model="mainPlayer" ng-value="(!fireteam[0] ? searchedPlayer : '')" autocorrect="off" autocomplete="off" spellcheck="false">
           </div>
           <div class="main-search__controls">
             <div class="main-search__refresh" ng-if="!subdomain" ng-show="fireteam[0].name != null">
@@ -41,7 +41,7 @@
           <div class="main-search__row">
             <div class="main-search__input">
               <input type="text" class="form-control" placeholder="{{fireteam[$index].name || 'Enter their teammates\' gamertag'}}"
-                     ng-model="teammateName" basic-click="suggestRecentPlayers()" ng-change="filter(teammateName)" data-toggle="dropdown">
+                     ng-model="teammateName" basic-click="suggestRecentPlayers()" ng-change="filter(teammateName)" data-toggle="dropdown" autocorrect="off" autocomplete="off" spellcheck="false">
               <ul class="dropdown-menu">
                 <li class="dropdown-menu__label">{{fireteam[0].name}}'s recent teammates</li>
                 <li ng-repeat="recentPlayer in recentPlayers" ng-if="recentPlayer.displayName !== fireteam[$parent.$index].name">
