weapon win percentage and selective query

--- a/app/components/inventory/weapons.template.html
+++ b/app/components/inventory/weapons.template.html
@@ -10,7 +10,7 @@
       <div class="weapon__title">
         <span ng-bind="weapon.definition.name"></span>
         <span class="weapon__damage" ng-if="topWeapons && topWeapons[weapon.definition.itemHash] && topWeapons[weapon.definition.itemHash].percision > 0"
-              ng-bind="'HS ACC ' + topWeapons[weapon.definition.itemHash].percision + '%'"></span>
+              ng-bind="' WIN % (' + topWeapons[weapon.definition.itemHash].win_percentage + '%)'"></span>
       </div>
       <div class="weapon__perks">
         <div class="weapon-perk" ng-repeat="node in weapon.nodes track by $index"
