--- a/app/components/player/player.html
+++ b/app/components/player/player.html
@@ -18,8 +18,8 @@
     <uib-tab class="player-tab--stats" heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
       <div ng-include="'components/stats/stats.partial.html'"></div>
     </uib-tab>
-    <uib-tab class="player-tab--maps" heading="Maps" analytics-on analytics-event="Click" analytics-category="Maps">
-      <div ng-include="'components/stats/maps.partial.html'"></div>
+    <uib-tab class="player-tab--maps" heading="Weapons" analytics-on analytics-event="Click" analytics-category="Weapons">
+      <div ng-include="'components/stats/weapons.partial.html'"></div>
     </uib-tab>
     <uib-tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches" ng-click="getLastMatch(player)">
       <div ng-include="'components/matches/matches.partial.html'"></div>
