fix win percentage

--- a/app/components/stats/weapons.partial.html
+++ b/app/components/stats/weapons.partial.html
@@ -19,7 +19,7 @@
             <label>Acc</label>
           </div>
           <div class="col-xs-2 stat">
-            <span ng-bind="(value.win_percentage | number: 2 + '%') || 0"></span>
+            <span ng-bind="(value.win_percentage + '%') || 0"></span>
             <label>Win %</label>
           </div>
           <div class="col-xs-2 stat">
