--- a/app/components/stats/weapons.partial.html
+++ b/app/components/stats/weapons.partial.html
@@ -15,7 +15,7 @@
             <label>HS</label>
           </div>
           <div class="col-xs-2 stat">
-            <span ng-bind="weapon.precision || 0"></span>
+            <span ng-bind="weapon.precision + '%' || 0"></span>
             <label>Acc</label>
           </div>
           <div class="col-xs-2 stat">
