sort opponents before limiting per page

--- a/app/components/home/opponents.partial.html
+++ b/app/components/home/opponents.partial.html
@@ -25,7 +25,7 @@
               </a>
           </div>
         </div>
-        <div class="row top-weapon" dir-paginate="opponent in opponents | itemsPerPage: 15 | orderBy:orderByField:reverseSort" style="margin-top: 0; padding-top: .75em; cursor: pointer; cursor: hand;"
+        <div class="row top-weapon" dir-paginate="opponent in opponents | orderBy:orderByField:reverseSort | itemsPerPage: 15" style="margin-top: 0; padding-top: .75em; cursor: pointer; cursor: hand;"
              ng-click="getMatchDetails(opponent.instanceId)" ng-class="{'active-player': matchResults.activityDetails.instanceId == opponent.instanceId}">
           <div class="col-xs-4 last-weapon-weapon__descr">
             <span class="last-match-weapon__title" style="line-height: 1.3;" ng-bind="opponent.displayName"></span>
