--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -4,32 +4,28 @@
       <div class="blog-post__img" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}"></div>
       <div class="blog-post__content">
         <div class="blog-post__title">
-          <h2>Opponent Searching and Year Two Flawless Data!</h2>
+          <h2>Weapon Stats and Year One Flawless</h2>
         </div>
         <ul class="blog-post__meta">
           <li>
-            <p><span class="material-icons">&#xE8DF;</span> Dec 22th, 2015</p>
+            <p><span class="material-icons">&#xE8DF;</span> Jan 2nd, 2015</p>
           </li>
         </ul>
         <div class="blog-post__text">
           <p>
-            So I made a quick beta version of a feature we want to have up on the site during the holidays,
-            you can now search through your trials opponents! <br/>
-            It's very Beta and has lots of issues but still usable, try it out for yourself over at
-            <strong><a href="http://opponents.destinytrialsreport.com/" target="_top">opponents.destinytrialsreport.com</a>.</strong>
+            We have <strong>upgraded our servers</strong> and are now collecting new data in <strong>realtime</strong>,
+            so your flawless counts will updated within minutes of exiting the lighthouse.
           </p>
           <p>
-            If you haven't already noticed, we figured out a way to bring you a reliable flawless count.
-            Currently it's only for Year Two since its not easy to collect but the good news is we are already
-            three weeks into the collection of Year One data.
-          </p>
-          <p>
-            To your right, you will see a chart of Guardians that were first to enter the <strong>lighthouse</strong> for that week.
-            We will be trying our best to update this week in realtime as well.
+            We are halfway done collecting your year one flawless data and you will see an updated count on here real soon so keep an eye out. <br/>
+            We also added longest account and character streak when you hover over the current streak section. <br/>
+            Lastly, we replaced map stats with your top 7 used weapons on your
+            <strong><a href="http://my.destinytrialsreport.com/" target="_top">my.destinytrialsreport.com</a></strong> profiles.
           </p>
           <p>
             Also dont forget to visit our friends over at <a href="https://Guardian.gg" target="_top">Guardian.gg</a>
-            for some great PvP and SRL statistics.
+            and check out our new <strong><a href="http://opponents.destinytrialsreport.com/" target="_top">opponents</a></strong>
+            section where you can search players you've played in past trials matches.
             <br/>
           </p>
           <p>
