fix icon urls, update blog, aside improvements

--- a/app/assets/css/parts/_donate.scss
+++ b/app/assets/css/parts/_donate.scss
@@ -1,6 +1,6 @@
 .donate {
-  padding: $controls-padding;
-  padding-bottom: 1.5em;
+  //padding: $controls-padding;
+  padding: 1em;
   border-top: 1px solid lighten($header-bg, 5%);
   border-bottom: 1px solid darken($header-bg, 5%);
   background: rgba(0, 0, 0, 0.05);
