--- a/app/assets/css/parts/_colofon.scss
+++ b/app/assets/css/parts/_colofon.scss
@@ -1,13 +1,12 @@
 .colofon {
   padding: $controls-padding;
-  padding-top: 1em;
+  padding: 1em;
   border-top: 1px solid lighten($header-bg, 5%);
   display: flex;
 }
 
 .colofon__copyright {
   font-size: 1.2em;
-  margin-bottom: .3em;
   color: lighten($text-on-dark, 20%);
   flex-grow: 1;
 }
