--- a/app/assets/css/elements/_popover.scss
+++ b/app/assets/css/elements/_popover.scss
@@ -136,8 +136,9 @@
   border-left-color: #fff;
 }
 
+.popover.longest-streak,
+.popover.ggg-elo,
 .popover.lighthouse-count {
-  color: rgba(0, 0, 0, .90);
   text-align: center;
   line-height: 15.4px;
   font-size: 10.78px;
@@ -150,6 +151,10 @@
     font-size: 10.78px;
     line-height: 15.4px;
   }
+}
+
+.popover.longest-streak {
+  color: rgba(0, 0, 0, .90);
 
   .count {
     font-size: 12.6px;
@@ -162,23 +167,28 @@
       font-weight: 400;
     }
   }
+}
 
+.popover.lighthouse-count {
+  font-size: 12.6px;
+  line-height: 18.4px;
+
+  table {
+    width: 100%;
+  }
+
+  .left {
+    text-align: left;
+  }
+
+  .incomplete-warning {
+    font-size: 10.78px;
+    margin-top: 5px;
+  }
 }
 
 .popover.ggg-elo {
   color: rgba(255, 255, 255, .71);
-  text-align: center;
-  line-height: 15.4px;
-  font-size: 10.78px;
-  padding: 0px;
-
-  .popover-title {
-    padding: 2px;
-    height: 19px;
-    border: 0px;
-    font-size: 10.78px;
-    line-height: 15.4px;
-  }
 
   .popover-content {
     color: #fff;
