--- a/app/assets/css/elements/_stats.scss
+++ b/app/assets/css/elements/_stats.scss
@@ -9,6 +9,10 @@
   > label {
     @extend .data-label;
   }
+
+  > i {
+    font-size: .9em;
+  }
 }
 
 .stat-row:not(:first-child) {
@@ -25,4 +29,13 @@
   text-transform: uppercase;
   color: #999;
   font-family: 'Roboto Condensed';
+}
+
+.stat__header {
+  @extend .data-label;
+  font-size: .9em;
+  margin-bottom: .75em;
+  padding-bottom: .5em;
+  border-bottom: 1px solid #e3e3e3;
+  color: #333;
 }
