Tweaked first players to reach lighthouse block

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -33,6 +33,7 @@
 @import 'parts/colofon';
 @import 'parts/home';
 @import 'parts/top-weapons';
+@import 'parts/first-in-lighthouse';
 
 // Player card
 @import 'parts/player';
