--- a/app/components/home/opponents.partial.html
+++ b/app/components/home/opponents.partial.html
@@ -43,7 +43,7 @@
       </div>
     </article>
   </div>
-  <article class="home__main" ng-class="{'full__width':!opponents}">
+  <article class="home__main">
     <div class="block blog-post shadow-z-1" ng-if="!matchResults">
       <div class="blog-post__img" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}"></div>
       <div class="blog-post__content">
