--- a/app/assets/css/elements/_block.scss
+++ b/app/assets/css/elements/_block.scss
@@ -6,6 +6,10 @@
   overflow: hidden;
 }
 
+.block--no-padding {
+  padding: 0;
+}
+
 .block__title {
   margin-top: -2em;
   margin-left: -2em;
@@ -15,6 +19,10 @@
   color: $text-on-dark;
   text-transform: uppercase;
   text-align: left;
+
+  .block--no-padding & {
+    margin: 0;
+  }
 
   h2 {
     margin: 0;
@@ -41,6 +49,10 @@
   margin-right: -2em;
   padding: 1.5em;
   background: #f3f3f3;
+
+  .block--no-padding & {
+    margin: 0;
+  }
 }
 
 .block__footer--ggg {
