ELO popover tweaks

--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -54,8 +54,8 @@
         <span class="match player-main-stats__streak" ng-class="{'match--win': player.activities.recentActivity.standing === 0, 'match--loss': player.activities.recentActivity.standing === 1}"></span>
         <label>Streak</label>
       </div>
-      <div class="col-xs-3 stat" data-template-url="shared/popovers/gggElo.popover.html" bs-popover>
-        <span ng-bind="player.ggg.elo || 'N/A'"></span>
+      <div class="col-xs-3 stat">
+        <span ng-bind="player.ggg.elo || 'N/A'" data-template-url="shared/popovers/gggElo.popover.html" bs-popover></span>
         <span>
           <a href="https://guardian.gg/en/faq" target="_blank"
              data-content="Elo is an account-wide rating system provided by Guardian.gg" bs-popover>
