--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -55,13 +55,20 @@
         <div class="first-in-lighthouse__content">
           <div class="stat first-in-lighthouse__players">
             <span ng-repeat="player in week track by $index">
-              <a href="http://my.destinytrialsreport.com/{{player.membershipType === '1' ? 'xbox' : 'ps'}}/{{player.displayName}}">
+              <a target="_blank" href="http://my.destinytrialsreport.com/{{player.membershipType === '1' ? 'xbox' : 'ps'}}/{{player.displayName}}">
                 {{player.displayName}}
               </a>
             </span>
             <label>Player<span ng-if="week.length > 1">s</span></label>
           </div>
-          <div class="stat first-in-lighthouse__time">
+          <div class="stat first-in-lighthouse__stats">
+            <span ng-if="week[0].membershipType === '1'">
+              <img src="assets/img/xbox.svg" alt="Xbox">
+            </span>
+            <span ng-if="week[0].membershipType === '2'">
+              <img src="assets/img/ps.svg" alt="PlayStation">
+            </span>
+            <label>Platform</label>
             <span ng-bind="week.time"></span>
             <label>Time needed</label>
           </div>
