--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -48,15 +48,15 @@
         </h2>
       </div>
       <div class="first-in-lighthouse" ng-repeat="week in flawlessLeaderboard | orderObjectBy:'instanceId':true track by $index">
-        <div class="first-in-lighthouse__label" style="background-image: url({{week.map}});">
+        <div class="first-in-lighthouse__label" ng-style="{'background-image':'url(' + week.map + ')'}">
           <label ng-if="$index === 0" ng-bind="trialsInProgress ? (week.weeksAgo <= 1 ? 'This week' : 'Last week') : 'Last week'"></label>
           <label ng-if="$index !== 0" ng-bind="week.weeksAgo + ' weeks ago'"></label>
         </div>
         <div class="first-in-lighthouse__content">
           <div class="stat first-in-lighthouse__players">
             <span ng-repeat="player in week track by $index">
-              <a target="_blank" href="http://my.destinytrialsreport.com/{{player.membershipType === '1' ? 'xbox' : 'ps'}}/{{player.displayName}}">
-                {{player.displayName}}
+              <a ng-href="http://my.destinytrialsreport.com/{{player.membershipType === '1' ? 'xbox' : 'ps'}}/{{player.displayName}}"
+                 ng-bind="player.displayName" target="_blank">
               </a>
             </span>
             <label>Player<span ng-if="week.length > 1">s</span></label>
