--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -23,7 +23,7 @@
             <strong><a href="http://my.destinytrialsreport.com/" target="_top">my.destinytrialsreport.com</a></strong> profiles.
           </p>
           <p>
-            Please don't forget to visit our friends over at <a href="https://Guardian.gg" target="_top">Guardian.gg</a>
+            Please don't forget to visit our friends over at <a href="https://guardian.gg" target="_top">Guardian.gg</a>
             and check out our new <strong><a href="http://opponents.destinytrialsreport.com/" target="_top">opponents</a></strong>
             section where you can search players you've played in past trials matches.
           </p>
@@ -83,7 +83,8 @@
           <img ng-src="{{platformValue ? 'assets/img/ps.svg' : 'assets/img/xbox.svg'}}">
         </figure>
         <h2>
-          <span class="highlight">Top weapons</span> {{trialsInProgress ? 'this' : 'last'}} week
+          <span class="highlight">Top weapons</span>
+          <span ng-bind="(trialsInProgress ? 'this' : 'last') + ' week'"></span>
         </h2>
       </div>
       <div class="top-weapons__type" ng-repeat="type in [gggWeapons[platformNumeric].primary,
