refactor date logic to use one central begin/end for current/last trials, misc adjustments

--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -125,7 +125,7 @@
         </a>
       </div>
       <div class="block__link">
-        <a class="btn" ng-href="https://guardian.gg/en/weapon-stats?platform={{platformNumeric}}&mode=14&start={{dateBeginTrials}}&end={{dateEndTrials}}"
+        <a class="btn" ng-href="https://guardian.gg/en/weapon-stats?platform={{platformNumeric}}&mode=14&start={{trialsDates.begin}}&end={{trialsDates.end}}"
            target="_blank" analytics-on analytics-event="Click" analytics-category="GGG Show More">
           Visit them for a lot more stats <i class="material-icons icon--small">&#xE5CC;</i>
         </a>
