--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -13,7 +13,7 @@
         </div>
       </div>
     </div>
-    <div class="home" ng-show="!fireteam[0] && !status" style="max-width: 1323px !important;">
+    <div class="home" ng-show="!fireteam[0] && !status">
       <div ng-include="'components/home/blog.partial.html'" ng-if="!sdOpponents"></div>
       <div ng-include="'components/home/opponents.partial.html'" ng-if="sdOpponents"></div>
     </div>
