--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -40,36 +40,35 @@
       </div>
     </div>
   </article>
-  <div class="home__aside" ng-if="flawlessLeaderboard">
+  <div class="home__aside" ng-if="lighthouseLeaderboard">
     <article class="block block--no-padding shadow-z-1">
       <div class="block__title">
         <h2>
           First to reach <span class="highlight">the lighthouse</span>
         </h2>
       </div>
-      <div class="first-in-lighthouse" ng-repeat="week in flawlessLeaderboard | orderObjectBy:'instanceId':true track by $index">
-        <div class="first-in-lighthouse__label" ng-style="{'background-image':'url(' + week.map + ')'}">
-          <label ng-if="$index === 0" ng-bind="trialsInProgress ? (week.weeksAgo <= 1 ? 'This week' : 'Last week') : 'Last week'"></label>
-          <label ng-if="$index !== 0" ng-bind="week.weeksAgo + ' weeks ago'"></label>
+      <div class="first-in-lighthouse" ng-repeat="entry in lighthouseLeaderboard track by $index">
+        <div class="first-in-lighthouse__label" ng-style="{'background-image':'url(' + entry.map + ')'}">
+          <label ng-bind="entry.header"></label>
         </div>
         <div class="first-in-lighthouse__content">
           <div class="stat first-in-lighthouse__players">
-            <span ng-repeat="player in week track by $index">
-              <a ng-href="http://my.destinytrialsreport.com/{{player.membershipType === '1' ? 'xbox' : 'ps'}}/{{player.displayName}}"
-                 ng-bind="player.displayName" target="_blank">
+            <span ng-repeat="player in entry.players track by $index">
+              <a ng-href="http://my.destinytrialsreport.com/{{$parent.entry.platform === 1 ? 'xbox' : 'ps'}}/{{player}}"
+                 ng-bind="player" target="_blank">
               </a>
             </span>
-            <label>Player<span ng-if="week.length > 1">s</span></label>
+            <label>Player<span ng-if="entry.players.length > 1">s</span></label>
           </div>
           <div class="stat first-in-lighthouse__stats">
-            <span ng-if="week[0].membershipType === '1'">
+            <span ng-if="entry.platform === 1">
               <img src="assets/img/xbox.svg" alt="Xbox">
             </span>
-            <span ng-if="week[0].membershipType === '2'">
+            <span ng-if="entry.platform === 2">
               <img src="assets/img/ps.svg" alt="PlayStation">
             </span>
             <label>Platform</label>
-            <span ng-bind="week.time"></span>
+            <span ng-bind="entry.time"></span>
             <label>Time needed</label>
           </div>
         </div>
