--- a/app/assets/css/parts/_controls.scss
+++ b/app/assets/css/parts/_controls.scss
@@ -26,4 +26,12 @@ header {
 .ad {
   padding: 1em;
   overflow: hidden;
+
+  > div:empty:before {
+    font-size: .9em;
+    display: block;
+    color: #777;
+    font-family: 'Roboto Condensed';
+    content: "Please consider turning off your ad blocker, it's one of our ways to keep this site running. Plus, you are missing out on some fabulous deals!!!"
+  }
 }
