--- a/app/assets/css/elements/_stats.scss
+++ b/app/assets/css/elements/_stats.scss
@@ -8,10 +8,19 @@
 
   > label {
     @extend .data-label;
+
+    &:only-child {
+      line-height: 1;
+    }
   }
 
   > i {
     font-size: .9em;
+  }
+
+  .faded {
+    font-size: .8em;
+    color: #999;
   }
 }
 
@@ -38,4 +47,8 @@
   padding-bottom: .5em;
   border-bottom: 1px solid #e3e3e3;
   color: #333;
+}
+
+.stat__label--heave {
+  color: #666;
 }
