--- a/app/assets/css/parts/_current-map.scss
+++ b/app/assets/css/parts/_current-map.scss
@@ -6,6 +6,7 @@
   flex-direction: row;
   align-items: flex-end;
   transition: filter linear .5s;
+  box-shadow: inset 0 -150px 50px -80px rgba(0, 0, 0, .75);
 }
 
 .current-map__content {
@@ -13,7 +14,6 @@
   padding: $controls-padding;
   padding-top: 1em;
   padding-bottom: 1em;
-  background: rgba(0, 0, 0, 0.5);
   color: white;
   display: flex;
   align-items: center;
@@ -29,7 +29,7 @@
   }
 }
 
-.current-map__heatmap .btn.btn.btn {
+.current-map__btn .btn.btn.btn {
   color: $controls-btn-color;
   margin: 0;
   margin-right: -15px;
