--- a/app/assets/css/parts/_top-weapons.scss
+++ b/app/assets/css/parts/_top-weapons.scss
@@ -7,6 +7,17 @@
   border-top: 1px solid #ccc;
 }
 
+.top-weapons--map__row {
+  .stat {
+    line-height: 1.6;
+    font-size: .9em;
+  }
+
+  & + .top-weapons--map__row {
+    margin-top: .75em;
+  }
+}
+
 .top-weapons__type + .top-weapons__type + .top-weapons__type {
   padding-bottom: 1.5em;
 }
