add week text to mapinfo modal, create reusable function for week text

--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -48,7 +48,7 @@
       </div>
       <div class="first-in-lighthouse" ng-repeat="entry in lighthouseLeaderboard track by $index">
         <div class="first-in-lighthouse__label" ng-style="{'background-image':'url(' + entry.map + ')'}">
-          <label ng-bind="entry.header"></label>
+          <label ng-bind="entry.weekText"></label>
         </div>
         <div class="first-in-lighthouse__content">
           <div class="stat first-in-lighthouse__players">
