--- a/app/assets/css/parts/_blog-post.scss
+++ b/app/assets/css/parts/_blog-post.scss
@@ -1,22 +1,12 @@
-
 .blog-post {
   display: flex;
   flex-direction: column;
-}
-
-.blog-post__img {
-  margin-left: -2em;
-  margin-top: -2em;
-  margin-right: -2em;
-  margin-bottom: 1.5em;
-  background-position: center;
-  background-size: cover;
-  height: 200px;
-  flex-grow: 1;
+  padding-bottom: 0;
 }
 
 .blog-post__content {
   flex-shrink: 0;
+  flex-grow: 1;
 }
 
 .blog-post__meta {
