--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -16,15 +16,8 @@
             so your flawless counts will be updated within minutes of exiting the lighthouse.
           </p>
           <p>
-            We are halfway done collecting your year one flawless data and you will see an updated count on here very soon so keep an eye out. <br/>
-            We also added longest account and character streak when you hover over the current streak section. <br/>
-            Lastly, we replaced map stats with your top 7 used weapons on your
+            We are halfway done collecting your year one flawless data and you will see an updated count on here very soon so keep an eye out. We also added longest account and character streak when you hover over the current streak section. Lastly, we replaced map stats with your top 7 used weapons on your
             <strong><a href="http://my.destinytrialsreport.com/" target="_top">my.destinytrialsreport.com</a></strong> profiles.
-          </p>
-          <p>
-            Please don't forget to visit our friends over at <a href="https://guardian.gg" target="_top">Guardian.gg</a>
-            and check out our new <strong><a href="http://opponents.destinytrialsreport.com/" target="_top">opponents</a></strong>
-            section where you can search players you've played in past trials matches.
           </p>
           <p>
             <strong>Use Twitter?</strong> We have good news! We're now on Twitter as <a href="https://twitter.com/TrialsReport">@TrialsReport</a>. Please follow us for updates
@@ -35,6 +28,11 @@
               <a href="mailto:destinytrialsreport@gmail.com" target="_top">email</a> us or open an issue on
               <a href="https://github.com/DestinyTrialsReport/DestinyTrialsReport" target="_top">GitHub</a>.</strong>
           </p>
+        </div>
+      </div>
+      <div class="block__footer block__footer--ad">
+        <div class="ad">
+          <div adsense></div>
         </div>
       </div>
     </div>
