--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -34,6 +34,7 @@
 @import 'parts/home';
 @import 'parts/top-weapons';
 @import 'parts/first-in-lighthouse';
+@import 'parts/kd-graph';
 
 // Player card
 @import 'parts/player';
