add data to map info modal

--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -67,6 +67,7 @@
     </div>
     <div class="current-map__btn">
       <button type="button" class="btn btn-default btn-sm"
+              ng-click="loadMapInfo(currentMapId)"
               data-template-url="shared/modals/mapinfo.modal.html" bs-modal>
         Info
       </button>
