--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -70,6 +70,10 @@ $duration: 1.4s;
   display: none;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 .d-block {
   display: block;
 }
@@ -120,15 +124,20 @@ $duration: 1.4s;
 }
 
 .btn-fab-left {
-  margin-left: 30% !important;
-}
-.btn-fab-right {
-  margin-right: 30% !important;
+  left: -90px !important;
 }
 
-.btn-fab {
-  margin-top: 21% !important;
+.btn-fab-right {
+  right: -90px !important;
+}
+
+.btn-fab-map {
   background-color: white !important;
+  top: 35% !important;
+  font-size: 41px !important;
+  width: 80px !important;
+  height: 80px !important;
+  position: fixed !important;
 }
 
 .slide-left {
@@ -154,4 +163,21 @@ $duration: 1.4s;
 
 .slide-left-remove, .slide-right-remove {
   transition: all ease-in-out .1s;
+}
+
+@media (max-width: 780px) {
+  .btn-fab-left {
+    left: 170px !important;
+    z-index: 1;
+  }
+  .btn-fab-right {
+    right: 32px !important;
+    z-index: 1;
+  }
+  .btn-fab-map {
+    top: 22% !important;
+    font-size: 32px !important;
+    width: 60px !important;
+    height: 60px !important;
+  }
 }
