--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -140,44 +140,109 @@ $duration: 1.4s;
   position: fixed !important;
 }
 
+@keyframes slideLeft {
+  0% {
+    transform: translateX(0);
+  }
+
+  50% {
+    opacity: 1;
+    transform: translateX(-300%);
+    animation-play-state: paused;
+  }
+
+  51% {
+    opacity: 0;
+  }
+
+  52% {
+    opacity: 0;
+    transform: translateX(300%);
+  }
+
+
+  53% {
+    opacity: 1;
+    transform: translateX(300%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideRight {
+  0% {
+    transform: translateX(0);
+  }
+
+  50% {
+    opacity: 1;
+    transform: translateX(300%);
+    animation-play-state: paused;
+  }
+
+  51% {
+    opacity: 0;
+  }
+
+  52% {
+    opacity: 0;
+    transform: translateX(-300%);
+  }
+
+
+  53% {
+    opacity: 1;
+    transform: translateX(-300%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
 .slide-left {
-  left: -300%;
+  animation-duration: .6s;
+  animation-name: slideLeft;
 }
 
 .slide-right {
-  left: 300%;
+  animation-duration: .6s;
+  animation-name: slideRight;
 }
 
-.slide-center {
-  transition: 0s linear all;
-  left: 0;
-}
-
-.slide-center-add, .slide-center-remove {
-  transition: all ease-in-out 1s;
-}
-
-.slide-left-add, .slide-right-add  {
-  transition: all ease-in-out .1s;
-}
-
-.slide-left-remove, .slide-right-remove {
-  transition: all ease-in-out .1s;
+.modal-content {
+  -webkit-backface-visibility: hidden;
 }
 
 @media (max-width: 780px) {
   .btn-fab-left {
-    left: 170px !important;
+    left: 0 !important;
     z-index: 1;
   }
   .btn-fab-right {
-    right: 32px !important;
+    right: 0 !important;
     z-index: 1;
   }
   .btn-fab-map {
-    top: 22% !important;
+    padding: 0 !important;
+    background-color: transparent !important;
+    top: 36% !important;
     font-size: 32px !important;
     width: 60px !important;
     height: 60px !important;
+  }
+  .btn.btn-fab {
+    box-shadow: none !important;
+    i {
+      font-size: 44px;
+    }
+  }
+  .modal-stats {
+    width: 100%;
+  }
+  .modal-hero__stats {
+    font-size: 1em;
   }
 }
