center modal info text

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -213,10 +213,10 @@ $duration: 1.4s;
 }
 
 .modal-content {
-  -webkit-backface-visibility: hidden;
+  //backface-visibility: hidden;
 }
 
-.faded {  
+.faded {
   color: #999;
 }
 
